<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Emotion control</string>
    <string name="emotion_control">Emotion control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_show_drawer_icon">Show in app drawer</string>
    <string name="category_app_launcher">App Launcher</string>
    <string name="category_general">General</string>
    <string name="category_lockscreen">Lockscreen</string>
    <string name="category_hardware_keys">Buttons</string>
    <string name="category_notifications_drawer">Notifications Drawer</string>
    <string name="category_power_menu">Power menu</string>
    <string name="category_sound">Sound</string>
    <string name="category_statusbar">Statusbar</string>
    <string name="category_ui">User Interface</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="center">Centered</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="add">Add</string>
    <string name="help">Help</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="choose_app">Choose application</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="dlg_reset_values_message">Reset values to default?</string>
    <string name="restarting_ui">Restarting UI\u2026</string>
    <string name="dlg_reset_emotion">Emotion</string>
    <string name="dlg_reset_android">Android</string>
    <string name="colors_title">Colors</string>
    <string name="text_title">Text</string>
    <string name="print_restart">Restart</string>
    <plurals name="multichoice_at_least">
        <item quantity="one">Please select at least <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at least <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <plurals name="multichoice_at_most">
        <item quantity="one">Please select at most <xliff:g id="number">%d</xliff:g> item.</item>
        <item quantity="other">Please select at most <xliff:g id="number">%d</xliff:g> items.</item>
    </plurals>
    <string name="dialog_color_picker">Color picker</string>
    <string name="press_color_to_apply">Press on color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FF000000</string>
    <string name="set">Set</string>
    <string name="default_color">Default</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="group_applications">Applications</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="systemui_restart_title">WARNING</string>
    <string name="systemui_restart_message">SystemUI will be restarted so that selected setting can be applied correctly.</string>
    <string name="gesture_anywhere_title">Gesture Anywhere</string>
    <string name="gesture_anywhere_enabled_title">Gesture Anywhere</string>
    <string name="gesture_anywhere_enabled_summary">Enable the Gesture Anywhere feature</string>
    <string name="gesture_anywhere_position_title">Location</string>
    <string name="gesture_anywhere_position_left">Left edge</string>
    <string name="gesture_anywhere_position_right">Right edge</string>
    <string name="gesture_anywhere_gestures_title">Gestures</string>
    <string name="gesture_anywhere_gestures_summary">Add, remove, and edit gestures</string>
    <string name="ga_button_add">Add gesture</string>
    <string name="ga_button_reload">Reload</string>
    <string name="ga_button_discard">Discard</string>
    <string name="ga_button_done">Done</string>
    <string name="ga_prompt_gesture_name">Name</string>
    <string name="ga_error_missing_name">You must enter a name</string>
    <string name="ga_save_success">Gesture saved in %s</string>
    <string name="ga_rename_action">OK</string>
    <string name="ga_cancel_action">Cancel</string>
    <string name="ga_gestures_loading">Loading gestures...</string>
    <string name="ga_gestures_empty">No gestures</string>
    <string name="ga_gestures_activity">Gestures</string>
    <string name="ga_gestures_edit">Edit</string>
    <string name="ga_gestures_delete">Delete</string>
    <string name="ga_gestures_delete_success">Gesture deleted</string>
    <string name="ga_gestures_rename_title">Rename gesture</string>
    <string name="ga_gestures_rename_label">Gesture name</string>
    <string name="ga_gestures_error_loading">Could not load %s. Make sure you have storage available.</string>
    <string name="trigger_category">Trigger region</string>
    <string name="trigger_width_title">Trigger width</string>
    <string name="trigger_width_summary">Adjust the width of the trigger area</string>
    <string name="trigger_top_title">Trigger position</string>
    <string name="trigger_top_summary">Adjust the vertical postion of the trigger area</string>
    <string name="trigger_bottom_title">Trigger height</string>
    <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
    <string name="profile_applist_title">Apps</string>
    <string name="profile_appgroups_title">App groups</string>
    <string name="profile_new_appgroup">New app group</string>
    <string name="profile_delete_appgroup">Delete this app group?</string>
    <string name="profile_appgroup_name_prompt">Enter a name for the new app group</string>
    <string name="profile_appgroup_name_title">Name</string>
    <string name="app_circle_bar_title">App circle bar</string>
    <string name="app_circle_bar_summary">Show circle app launcher after touching right side of screen</string>
    <string name="app_circle_bar_included_apps_title">Included apps</string>
    <string name="app_circle_bar_included_apps_summary">Apps will show in app circle bar</string>
    <string name="app_sidebar_title">AppSidebar</string>
    <string name="app_sidebar_enable_title">Enable Appbar</string>
    <string name="app_sidebar_enable_summaryOn">Appbar is enabled</string>
    <string name="app_sidebar_enable_summaryOff">Appbar is disabled</string>
    <string name="app_sidebar_setup_items_title">Setup Appbar content</string>
    <string name="app_sidebar_setup_items_summary">Add, remove, and position items in the appbar</string>
    <string name="app_sidebar_transparency_title">Appbar transparency</string>
    <string name="app_sidebar_transparency_summary">Adjust the Appbar transparency level</string>
    <string name="app_sidebar_position_title">Appbar position</string>
    <string name="app_sidebar_position_summary">Position the Appbar on the left or right side of the screen</string>
    <string name="app_sidebar_position_left">Left</string>
    <string name="app_sidebar_position_right">Right</string>
    <string name="app_sidebar_hide_labels_title">Hide icon labels</string>
    <string name="app_sidebar_hide_labels_summary">Hide Appbar icon labels</string>
    <string name="tab_category">Visible Tab</string>
    <string name="use_tab_title">Display tab</string>
    <string name="use_tab_summary">Display a visible tab on the side which will display the appbar when touched.</string>
    <string name="tab_position_title">Tab location</string>
    <string name="tab_position_summary">Display the tab on the top, middle, or bottom on the side of the screen.</string>
    <string name="tab_size_title">Tab size</string>
    <string name="tab_size_summary">Change the size of the visible tab.</string>
    <string name="app_sidebar_hide_timeout_title">Appbar auto hide</string>
    <string name="app_sidebar_hide_timeout_summary">Timeout to auto hide Appbar.</string>
    <string name="general_settings">General settings</string>
    <string name="toast_icon_title_cat">Toast settings</string>
    <string name="toast_settings_title">Toast settings</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Show app icon behind toast notification</string>
    <string name="toast_text_color">Toast text color</string>
    <string name="toast_icon_color">Toast icon color</string>
    <string name="lock_clock_title_cat">LockClock Widget</string>
    <string name="lock_clock_title">cLock settings</string>
    <string name="lock_clock_summary">View or change how the \'cLock\' widget will be displayed.</string>
    <string name="screenshot_type_title_cat">Screenshot settings</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="screenshot_type_fullscreen">Take fullscreen screenshots</string>
    <string name="screenshot_type_partial">Drag selection on the area you want to take as a screenshot</string>
    <string name="powermenu_screenshot_delay_title">Screenshot delay</string>
    <string name="powermenu_screenshot_delay_message">Delay currently set to %1$s seconds</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="device_hostname_title_cat">Hostname setting</string>
    <string name="device_hostname">Device hostname</string>
    <string name="recents_settings">Recents settings</string>
    <string name="recent_category_title">General recents settings</string>
    <string name="omniswitch_category_title">OmniSwitch</string>
    <string name="recents_use_omniswitch_title">Use OmniSwitch for recents</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of default recents view</string>
    <string name="omniswitch_start_settings_title">Settings</string>
    <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
    <string name="pa_pie_menu_title">Always show menu button</string>
    <string name="pa_pie_menu_summary">Whether or not the menu button should always be shown, even when its not needed</string>
    <string name="pa_pie_lastapp_title">Last App</string>
    <string name="pa_pie_lastapp_summary">Enable last app button</string>
    <string name="pa_pie_killtask_title">Kill Task</string>
    <string name="pa_pie_killtask_summary">Enable kill task button</string>
    <string name="pa_pie_notifications_title">Notifications</string>
    <string name="pa_pie_notifications_summary">Enable notifications button</string>
    <string name="pa_pie_settings_panel_title">Quick Settings Panel</string>
    <string name="pa_pie_settings_panel_summary">Enable expand quick settings panel button</string>
    <string name="pa_pie_screenshot_title">Screenshot</string>
    <string name="pa_pie_screenshot_summary">Enable screenshot button</string>
    <string name="pa_pie_color_style_title">Pie Color Style</string>
    <string name="pa_pie_background_title">Background Color</string>
    <string name="pa_pie_select_title">Selection Color</string>
    <string name="pa_pie_outlines_title">Outlines Color</string>
    <string name="pa_pie_status_clock_title">Clock Color</string>
    <string name="pa_pie_status_title">Status Color</string>
    <string name="pa_pie_chevron_title">Chevron Color</string>
    <string name="pa_pie_juice_title">Battery Juice Color</string>
    <string name="pa_pie_button_color">Button Color</string>
</resources>