<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 EmotionOS

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pa_pie_menu"
        android:title="@string/pa_pie_menu_title"
        android:summary="@string/pa_pie_menu_summary"
        />

    <SwitchPreference
        android:key="pa_pie_killtask"
        android:title="@string/pa_pie_killtask_title"
        android:summary="@string/pa_pie_killtask_summary"
        />

    <SwitchPreference
        android:key="pa_pie_lastapp"
        android:title="@string/pa_pie_lastapp_title"
        android:summary="@string/pa_pie_lastapp_summary"
        />

    <SwitchPreference
        android:key="pa_pie_notifications"
        android:title="@string/pa_pie_notifications_title"
        android:summary="@string/pa_pie_notifications_summary"
        />

    <SwitchPreference
        android:key="pa_pie_settings_panel"
        android:title="@string/pa_pie_settings_panel_title"
        android:summary="@string/pa_pie_settings_panel_summary"
        />

    <SwitchPreference
        android:key="pa_pie_screenshot"
        android:title="@string/pa_pie_screenshot_title"
        android:summary="@string/pa_pie_screenshot_summary"
        />

</PreferenceScreen>
