<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 EmotionOS

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="pa_pie_enable_color"
        android:title="@string/pa_pie_color_style_title" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_button_color"
        android:title="@string/pa_pie_button_color"
        android:defaultValue="0xffffffff"
        android:dependency="pa_pie_enable_color" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_background"
        android:title="@string/pa_pie_background_title"
        android:defaultValue="0xaf000000"
        android:dependency="pa_pie_enable_color"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_select"
        android:title="@string/pa_pie_select_title"
        android:defaultValue="0xff009688"
        android:dependency="pa_pie_enable_color"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_outlines"
        android:title="@string/pa_pie_outlines_title"
        android:defaultValue="0xff1b1f23"
        android:dependency="pa_pie_enable_color"
        alphaSlider="true" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_status_clock"
        android:title="@string/pa_pie_status_clock_title"
        android:defaultValue="0xffffffff"
        android:dependency="pa_pie_enable_color" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_status"
        android:title="@string/pa_pie_status_title"
        android:defaultValue="0xffffff"
        android:dependency="pa_pie_enable_color" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_chevron"
        android:title="@string/pa_pie_chevron_title"
        android:defaultValue="0xff009688"
        android:dependency="pa_pie_enable_color" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="pa_pie_juice"
        android:title="@string/pa_pie_juice_title"
        android:defaultValue="0xff00ff00"
        android:dependency="pa_pie_enable_color" />
</PreferenceScreen>
